<resources>

    <!--
    SECTIONS OF THE STRING RESOURCES FILE

        01 - APP THEME
        02 - SPLASH SCREEN
        03 - MAIN SCREEN
        04 - DELETE POPUP SCREEN
        05 - UPDATE POPUP SCREEN
        06 - MOVE POPUP SCREEN
        07 - CREATE APPOINTMENT SCREEN
        08 - SEARCH POPUP SCREEN
        09 - SEARCH APPOINTMENT SCREEN

        Developed by Dilum De Silva | 2016142
    -->


    <!--main app theme related settings-->
    <string name="app_name">Scheduler2.2</string>

    <!--splash screen related strings-->
    <string name="copyright_messege">Copyright © 2018 | Developed by Dilum De Silva</string>


    <!--Main Screen related Strings-->
    <string name="ms_search_appointment">Search Appointment</string>
    <string name="ms_move">Move</string>
    <string name="ms_delete">Delete</string>
    <string name="ms_view">View</string>
    <string name="ms_create">Create</string>

    <!--Delete popup related strings-->
    <string name="d_popup_msg">Please select an option,</string>
    <string name="d_popup_heading">Delete Appointment</string>
    <string name="d_popup_options">1. Delete all appointments for that date \n
    \n 2. Select an appointment to delete</string>

    <!--update popup related strings-->
    <string name="updatePopUp_heading">UPDATE APPOINTMENT</string>
    <string name="updatePopUp_subHeading">Please fill necessary fields to update appointment</string>
    <string name="updatePopUp_updateTittle">Title of the appointment</string>
    <string name="updatePopUp_updateTime">Time of the appointment</string>
    <string name="updatePopUp_updateDetails">Details of the appointment</string>

    <!--Move popup related strings-->
    <string name="movePopup_heading">MOVE APPOINTMENT</string>
    <string name="movePopup_subHeading">Please select the date you wish to move the appointment</string>
    <string name="btnmovePopup_text">MOVE</string>

    <!--create appointment screen related strings-->
    <string name="createAppointment_heading">CREATE APPOINTMENT</string>
    <string name="createScreen_thesaurusDescription">Type a word in the text box bellow and press the THESAURUS button to find out the synonyms related to that word</string>
    <string name="createScreen_btnSave_text">SAVE</string>

    <!--search popup related strings-->
    <string name="searchPopUp_Tittle">Title of the appointment</string>
    <string name="searchPopUp_Time">Time of the appointment</string>
    <string name="searchPopUp_Details">Details of the appointment</string>

    <!--Search appointment screen related strings-->
    <string name="searchAppointment_heading">SEARCH APPOINTMENT</string>
    <string name="searchAppointment_subHeading">Please enter a keyword and press the SEARCH button to search relevant appointments</string>
    <string name="searchAppointment_ETextHint">Enter a keyword</string>


</resources>
