<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/movePopup_screen"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10px">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movePopup_heading"
        android:textSize="24sp"
        android:textColor="@color/Text"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/Text"
        android:text="@string/movePopup_subHeading"/>

    <CalendarView
        android:id="@+id/calendarViewPopup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/CalenderViewCustom"
        android:dateTextAppearance="@style/CalenderViewDateCustomText"
        android:weekDayTextAppearance="@style/CalenderViewWeekCustomText"/>

        <Button

            android:id="@+id/moveButton"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/rounded_buttons"
            android:text="@string/btnmovePopup_text"
            android:layout_marginBottom="20dp"/>
    </LinearLayout>

</RelativeLayout>