<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/background_gradient"
    android:id="@+id/updatePopup_screen"
    android:gravity="center_horizontal"
    android:padding="10px">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updatePopUp_heading"
            android:textSize="@dimen/heading_TextSize"
            android:textStyle="bold"
            android:textColor="@color/Text"
            android:textAlignment="center"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/updatePopUp_subHeading"
            android:layout_marginBottom="20dp"
            android:textColor="@color/Text"
            android:textAlignment="center"/>


        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="vertical">


            <EditText
                android:id="@+id/updateTitleEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/updatePopUp_updateTittle"
                android:textColor="@color/Text"
                android:inputType="text"/>

            <EditText
                android:id="@+id/updateTimeEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/updatePopUp_updateTime"
                android:textColor="@color/Text"
                android:inputType="time"/>


            <EditText
                android:id="@+id/updateDetailsEditText"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="30dp"
                android:ems="10"
                android:hint="@string/updatePopUp_updateDetails"
                android:inputType="textMultiLine"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/updateButton"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_buttons"
                android:layout_weight="1"
                android:text="UPDATE"
                android:textColor="@color/colorPrimaryDark"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>