<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/popup_gradient"
    android:id="@+id/searchPoppup_screen">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="20dp"
            android:text="@string/searchPopUp_Tittle"
            android:textColor="@color/Text"/>

        <TextView
            android:id="@+id/searchedTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Text"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="20dp"
            android:text="@string/searchPopUp_Time"
            android:textColor="@color/Text"/>

        <TextView
            android:id="@+id/searchedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/Text"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_margin="20dp"
            android:text="@string/searchPopUp_Details"
            android:textColor="@color/Text"/>

        <TextView
            android:id="@+id/searchedDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:textColor="@color/Text"
            android:layout_marginBottom="30dp"/>


    </LinearLayout>

    </ScrollView>

</RelativeLayout>