<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchAppoinmentScreen"
    android:background="@drawable/background_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:id="@+id/headingTextView"
            android:textStyle="bold"
            android:textSize="@dimen/heading_TextSize"
            android:text="@string/searchAppointment_heading"
            android:textColor="@color/Text"
            android:textAlignment="center"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/helperTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:text="@string/searchAppointment_subHeading"
            android:textColor="@color/Text"
            android:textAlignment="center"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/searchEditText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/searchAppointment_ETextHint"
                android:textColor="@color/Text"
                android:inputType="text"
                android:nextFocusDown="@+id/appointmentNumberEditText"
                android:nextFocusUp="@+id/appointmentNumberEditText" />

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SEARCH" />

        </LinearLayout>

        <ListView
            android:id="@+id/searchList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="2dp"/>

    </LinearLayout>

</RelativeLayout>